Added login, register, user list logic

--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -2,7 +2,7 @@
   <div class="mt-0">
     <div class="row">
       <div class="col-2 mx-auto">
-        <img src="assets/logo_pm_200x200.png" alt="logo.png">
+        <a href="/list"><img src="assets/logo_pm_200x200.png" alt="logo.png"></a>
       </div>
     </div>
     <h2 class="text-center"> Add Pet </h2>
