--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -3,10 +3,10 @@
   <div class="mt-0">
     <div class="row">
       <div class="col-2 mx-auto">
-        <img src="assets/logo_pm_200x200.png" alt="logo.png">
+        <a href=""><img src="assets/logo_pm_200x200.png" alt="logo.png"></a>
       </div>
     </div>
-    <h2 class="text-center"> Add Pet </h2>
+    <h2 class="text-center"> Edit Pet </h2>
     <div class="row">
       <div class="col-md-5 mx-auto">
         <form>
