--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,22 +10,20 @@
           <div class="row">
           </div>
           <div class="card card-body">
-            <form id="submitForm" action="#" method="post" data-parsley-validate=""
-                  data-parsley-errors-messages-disabled="true" novalidate="" _lpchecked="1">
-              <input type="hidden" name="_csrf" value="7635eb83-1f95-4b32-8788-abec2724a9a4">
+            <form action="#" method="post" data-parsley-validate="" novalidate="">
               <div class="form-group required">
                 <label for="username"> Enter your Username </label>
-                <input type="text" class="form-control text-lowercase" id="username" required="" name="username"
+                <input [(ngModel)]="username" type="text" class="form-control" id="username" required="" name="username"
                        value="">
               </div>
               <div class="form-group required">
                 <label class="d-flex flex-row align-items-center" for="password"> Enter your Password </label>
-                <input type="password" class="form-control" required="" id="password" name="password" value="">
+                <input [(ngModel)]="password" type="password" class="form-control" required="" id="password" name="password" value="">
               </div>
               <div class="form-group mt-4 mb-4">
               </div>
               <div class="form-group pt-1 col-md-2 mx-auto">
-                <button (click)="getLoginInfo()" class="btn btn-primary btn-block" type="submit"> Log In</button>
+                <button (click)="getLoginInfo(username, password)" class="btn btn-primary btn-block" type="submit"> Log In</button>
               </div>
             </form>
             <p class="small-xl pt-3 text-center">
