--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col">
       <div class="position-relative mt-5">
-          <a class="btn btn-outline-dark position-absolute end-0" href="">Logout</a>
+          <a class="btn btn-outline-dark position-absolute end-0" (click)="logOut()" href="">Logout</a>
       </div>
     </div>
   </div>
@@ -23,13 +23,13 @@
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mustikas</td>
-        <td>202211151535</td>
-        <td>Cat</td>
-        <td>Brown</td>
-        <td>Estonia</td>
+      <tr *ngFor="let pet of userPets; index as i">
+        <th scope="row">{{i + 1}}</th>
+        <td>{{pet.name}}</td>
+        <td>{{pet.code}}</td>
+        <td>{{pet.type}}</td>
+        <td>{{pet.color}}</td>
+        <td>{{pet.country}}</td>
         <td><a class="btn btn-primary" href="/edit">Edit</a></td>
       </tr>
       </tbody>
