--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="mt-0">
     <div class="row">
@@ -12,40 +13,48 @@
           <div class="mb-3">
             <label for="name">Name</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="name" required="true" placeholder="Name">
+              <input [(ngModel)]="petName" name="first" type="text" class="form-control" id="name" required="true" placeholder="Name">
             </div>
           </div>
-
           <div class="mb-3">
-            <label for="code">Code</label>
+            <label for="code">Code, minimum length is 5 digits</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="code" required="true" placeholder="Code">
+              <input [(ngModel)]="petCode" name="second" type="number" class="form-control" id="code" required="true" placeholder="Code">
             </div>
+          </div>
+          <div *ngIf="errorResponse.errorCode === codeExistsError" class="alert alert-danger mt-3" role="alert">
+            {{errorResponse.message}}
+          </div>
+          <div *ngIf="errorResponse.errorCode === codeLengthError" class="alert alert-danger mt-3" role="alert">
+            {{errorResponse.message}}
+          </div>
+          <div *ngIf="codeCheck" class="alert alert-danger mt-3" role="alert">
+            A pet with this code is already registered!
           </div>
           <div class="mb-3">
             <label for="types">Type</label>
-            <select class="form-select d-block w-100" id="types" required="true" [(ngModel)]="selectedType">
-              <option value="">Choose...</option>
-              <option *ngFor="let value of typeValues" ngValue="type.id">{{value.type}}</option>
+            <select [(ngModel)]="petType" name="third" class="form-select d-block w-100" id="types" required="true">
+              <option *ngFor="let value of typeValues" [value]="value.id">{{value.type}}</option>
             </select>
           </div>
           <div class="mb-3">
             <label for="colors">Fur color</label>
-            <select class="form-select d-block w-100" id="colors" required="true">
-              <option>Choose...</option>
-              <option *ngFor="let value of colorValues">{{value.color}}</option>
+            <select [(ngModel)]="petColor" name="third" class="form-select d-block w-100" id="colors" required="true">
+              <option *ngFor="let value of colorValues" [value]="value.id">{{value.color}}</option>
             </select>
           </div>
           <div class="mb-3">
             <label for="countries">Country of origin</label>
-            <select class="form-select d-block w-100" id="countries" required="true" formControlName="country">
-              <option value="">Choose...</option>
-              <option *ngFor="let value of countryValues" ngValue="country">{{value.country}}</option>
+            <select [(ngModel)]="petCountry" name="third" class="form-select d-block w-100" id="countries" required="true">
+              <option *ngFor="let value of countryValues" [value]="value.id">{{value.country}}</option>
             </select>
           </div>
+          <div *ngIf="inputCheck" class="alert alert-danger mt-3" role="alert">
+            Please fill all input fields!
+          </div>
           <div class="form-group pt-1 col-md-2 mx-auto">
-            <button class="btn btn-primary" type="submit">
-              Add Pet
+            <button (click)="addPet()" class="btn btn-primary" type="submit">
+              Add
             </button>
           </div>
         </form>
@@ -53,4 +62,6 @@
     </div>
   </div>
 </div>
+
+
 
