--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -3,7 +3,7 @@
   <div class="mt-0">
     <div class="row">
       <div class="col-2 mx-auto">
-        <a href=""><img src="assets/logo_pm_200x200.png" alt="logo.png"></a>
+        <a href="/list"><img src="assets/logo_pm_200x200.png" alt="logo.png"></a>
       </div>
     </div>
     <h2 class="text-center"> Edit Pet </h2>
@@ -16,11 +16,10 @@
               <input type="text" class="form-control" id="name" required="true" placeholder="Name">
             </div>
           </div>
-
           <div class="mb-3">
             <label for="code">Code</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="code" required="true" placeholder="Code">
+              <input type="text" class="form-control disabled" id="code" required="true" placeholder="Code" readonly>
             </div>
           </div>
 
@@ -28,11 +27,7 @@
             <label for="types">Type</label>
             <select class="form-select d-block w-100" id="types" required="true">
               <option value="">Choose...</option>
-              <option>Cat</option>
-              <option>Dog</option>
-              <option>Horse</option>
-              <option>Rabbit</option>
-              <option>Parrot</option>
+              <option *ngFor="let value of typeValues">{{value.type}}</option>
             </select>
           </div>
 
@@ -40,11 +35,7 @@
             <label for="colors">Fur color</label>
             <select class="form-select d-block w-100" id="colors" required="true">
               <option value="">Choose...</option>
-              <option>Black</option>
-              <option>White</option>
-              <option>Brown</option>
-              <option>Yellow</option>
-              <option>Blue</option>
+              <option *ngFor="let value of colorValues">{{value.color}}</option>
             </select>
           </div>
 
@@ -52,21 +43,16 @@
             <label for="countries">Country of origin</label>
             <select class="form-select d-block w-100" id="countries" required="true">
               <option value="">Choose...</option>
-              <option>Estonia</option>
-              <option>Latvia</option>
-              <option>Lithuania</option>
-              <option>Finland</option>
-              <option>Sweden</option>
-              <option>Norway</option>
+              <option *ngFor="let value of countryValues">{{value.country}}</option>
             </select>
           </div>
-          <div class="form-group pt-1 col-md-2 mx-auto">
-            <button class="btn btn-primary" type="submit">
+          <div class="form-group pt-1 col-4 mx-auto">
+            <button (click)="editPet()" class="btn btn-primary" type="submit">
               Save
             </button>
           </div>
-          <div class="form-group pt-1 col-md-2 mx-auto">
-            <button class="btn btn-primary" type="submit">
+          <div class="form-group pt-1 col-4 mx-auto">
+            <button (click)="deletePet()" class="btn btn-primary" type="submit">
               Delete
             </button>
           </div>
