--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -49,7 +49,7 @@
               <option *ngFor="let value of countryValues" [value]="value.id">{{value.country}}</option>
             </select>
           </div>
-          <div *ngIf="inputCheck" class="alert alert-danger mt-3" role="alert">
+          <div *ngIf="inputHasError" class="alert alert-danger mt-3" role="alert">
             Please fill all input fields!
           </div>
           <div class="form-group pt-1 col-md-2 mx-auto">
