--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -7,43 +7,44 @@
       </div>
     </div>
     <h2 class="text-center"> Edit Pet </h2>
-    <div class="row">
+    <div *ngIf="typeValues?.length && countryValues?.length && colorValues?.length" class="row">
       <div class="col-md-5 mx-auto">
         <form>
           <div class="mb-3">
             <label for="name">Name</label>
             <div class="input-group">
-              <input type="text" class="form-control" id="name" required="true" placeholder="Name">
+              <input [(ngModel)]="name" type="text" class="form-control" id="name" required="true" placeholder="Name"
+              name="name">
             </div>
           </div>
           <div class="mb-3">
             <label for="code">Code</label>
             <div class="input-group">
-              <input type="text" class="form-control disabled" id="code" required="true" placeholder="Code" readonly>
+              <input [(ngModel)]="code" type="text" class="form-control disabled text-muted" id="code" required="true" placeholder="Code" readonly name="code">
             </div>
           </div>
 
           <div class="mb-3">
             <label for="types">Type</label>
-            <select class="form-select d-block w-100" id="types" required="true">
+            <select [(ngModel)]="type" class="form-select d-block w-100" id="types" required="true" name="type">
               <option value="">Choose...</option>
-              <option *ngFor="let value of typeValues">{{value.type}}</option>
+              <option *ngFor="let value of typeValues" [value]="value.id">{{value.type}}</option>
             </select>
           </div>
 
           <div class="mb-3">
             <label for="colors">Fur color</label>
-            <select class="form-select d-block w-100" id="colors" required="true">
+            <select [(ngModel)]="color" class="form-select d-block w-100" id="colors" required="true" name="color">
               <option value="">Choose...</option>
-              <option *ngFor="let value of colorValues">{{value.color}}</option>
+              <option *ngFor="let value of colorValues" [value]="value.id">{{value.color}}</option>
             </select>
           </div>
 
           <div class="mb-3">
             <label for="countries">Country of origin</label>
-            <select class="form-select d-block w-100" id="countries" required="true">
+            <select [(ngModel)]="country" class="form-select d-block w-100" id="countries" required="true" name="country">
               <option value="">Choose...</option>
-              <option *ngFor="let value of countryValues">{{value.country}}</option>
+              <option *ngFor="let value of countryValues" [value]="value.id">{{value.country}}</option>
             </select>
           </div>
           <div class="form-group pt-1 col-4 mx-auto">
@@ -57,6 +58,9 @@
             </button>
           </div>
         </form>
+        <div *ngIf="!petInfo?.typeId">
+          loading
+        </div>
       </div>
     </div>
   </div>
