--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -10,15 +10,15 @@
   </div>
   <div class="row mt-5">
     <div>
-      <table class="table table-hover">
+      <table class="table table-hover" >
         <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Name</th>
-          <th scope="col">Code</th>
-          <th scope="col">Type</th>
-          <th scope="col">Fur color</th>
-          <th scope="col">Country</th>
+          <th scope="col" class="sort" (click)="order('id')"># <i [class]="orderDirection('id')"></i></th>
+          <th scope="col" class="sort" (click)="order('name')">Name <i [class]="orderDirection('name')"></i></th>
+          <th scope="col" class="sort" (click)="order('code')">Code <i [class]="orderDirection('code')"></i></th>
+          <th scope="col" class="sort" (click)="order('type')">Type <i [class]="orderDirection('type')"></i></th>
+          <th scope="col" class="sort" (click)="order('color')">Fur color<i [class]="orderDirection('color')"></i></th>
+          <th scope="col" class="sort" (click)="order('country')">Country<i [class]="orderDirection('country')"></i></th>
           <th scope="col"></th>
         </tr>
         </thead>
