--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="mt-0">
     <div class="row">
@@ -9,21 +8,37 @@
     <h2 class="text-center"> Edit Pet </h2>
     <div *ngIf="typeValues?.length && countryValues?.length && colorValues?.length" class="row">
       <div class="col-md-5 mx-auto">
-        <form>
+        <div *ngIf="hasSaved">
+          <div class="alert alert-success" role="alert">
+            Pet updated!
+          </div>
+          <div class="form-group pt-1 col-3 mx-auto">
+            <a class="btn btn-primary btn-block col-12" type="submit" href="/list">To pet list</a>
+          </div>
+        </div>
+        <div *ngIf="hasDeleted">
+          <div class="alert alert-success justify-content-center" role="alert">
+            Pet deleted!
+          </div>
+          <div class="form-group pt-1 col-3 mx-auto">
+            <a class="btn btn-primary btn-block col-12" type="submit" href="/list">To pet list</a>
+          </div>
+        </div>
+        <form *ngIf="!hasSaved && !hasDeleted">
           <div class="mb-3">
             <label for="name">Name</label>
             <div class="input-group">
               <input [(ngModel)]="name" type="text" class="form-control" id="name" required="true" placeholder="Name"
-              name="name">
+                     name="name">
             </div>
           </div>
           <div class="mb-3">
             <label for="code">Code</label>
             <div class="input-group">
-              <input [(ngModel)]="code" type="text" class="form-control disabled text-muted" id="code" required="true" placeholder="Code" readonly name="code">
+              <input [(ngModel)]="code" type="text" class="form-control disabled text-muted" id="code" required="true"
+                     placeholder="Code" readonly name="code">
             </div>
           </div>
-
           <div class="mb-3">
             <label for="types">Type</label>
             <select [(ngModel)]="type" class="form-select d-block w-100" id="types" required="true" name="type">
@@ -31,7 +46,6 @@
               <option *ngFor="let value of typeValues" [value]="value.id">{{value.type}}</option>
             </select>
           </div>
-
           <div class="mb-3">
             <label for="colors">Fur color</label>
             <select [(ngModel)]="color" class="form-select d-block w-100" id="colors" required="true" name="color">
@@ -42,20 +56,26 @@
 
           <div class="mb-3">
             <label for="countries">Country of origin</label>
-            <select [(ngModel)]="country" class="form-select d-block w-100" id="countries" required="true" name="country">
+            <select [(ngModel)]="country" class="form-select d-block w-100" id="countries" required="true"
+                    name="country">
               <option value="">Choose...</option>
               <option *ngFor="let value of countryValues" [value]="value.id">{{value.country}}</option>
             </select>
           </div>
-          <div class="form-group pt-1 col-4 mx-auto">
-            <button (click)="editPet()" class="btn btn-primary" type="submit">
-              Save
-            </button>
+          <div *ngIf="inputHasError" class="alert alert-danger mt-3" role="alert">
+            Please fill all input fields!
           </div>
-          <div class="form-group pt-1 col-4 mx-auto">
-            <button (click)="deletePet()" class="btn btn-primary" type="submit">
-              Delete
-            </button>
+          <div class="justify-content-center">
+            <div class="form-group pt-1 col-2 mx-auto">
+              <button (click)="editPet()" class="btn btn-primary col-12" type="submit">
+                Save
+              </button>
+            </div>
+            <div class="form-group pt-1 col-2 mx-auto">
+              <button (click)="deletePet()" class="btn btn-primary col-12 justify-content-center" type="submit">
+                Delete
+              </button>
+            </div>
           </div>
         </form>
         <div *ngIf="!petInfo?.typeId">
