--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,11 +13,13 @@
             <form action="#" method="post" data-parsley-validate="" novalidate="">
               <div class="form-group required">
                 <label for="username"> Enter your Username </label>
-                <input [(ngModel)]="username" type="text" class="form-control" id="username" required="true" name="username">
+                <input [(ngModel)]="username" type="text" class="form-control" id="username" required="true"
+                       name="username">
               </div>
               <div class="form-group required">
                 <label class="d-flex flex-row align-items-center" for="password"> Enter your Password </label>
-                <input [(ngModel)]="password" type="password" class="form-control" required="true" id="password" name="password">
+                <input [(ngModel)]="password" type="password" class="form-control" required="true" id="password"
+                       name="password">
               </div>
               <div *ngIf="errorResponse.errorCode" class="alert alert-danger mt-3" role="alert">
                 {{errorResponse.message}}
@@ -25,7 +27,9 @@
               <div class="form-group mt-4 mb-4">
               </div>
               <div class="form-group pt-1 col-md-2 mx-auto">
-                <button (click)="getLoginInfo(username, password)" class="btn btn-primary btn-block" type="submit"> Log In</button>
+                <button (click)="getLoginInfo(username, password)" class="btn btn-primary btn-block" type="submit"> Log
+                  In
+                </button>
               </div>
             </form>
             <p class="small-xl pt-3 text-center">
