Added sorting function to the table

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -6,9 +6,9 @@
       </div>
     </div>
   </div>
-  <div class="row mt-5">
-    <div>
-      <table class="table table-hover">
+  <div class="row pt-5">
+    <div  class="pt-5">
+      <table class="table table-hover pt-5">
         <caption hidden>Pet list</caption>
         <thead>
         <tr>
