--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -63,7 +63,7 @@
             </select>
           </div>
           <div *ngIf="inputHasError" class="alert alert-danger mt-3" role="alert">
-            Please fill all input fields!
+            Please fill all fields!
           </div>
           <div class="justify-content-center">
             <div class="form-group pt-1 col-2 mx-auto">
