--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,6 +24,9 @@
               <div *ngIf="errorResponse.errorCode" class="alert alert-danger mt-3" role="alert">
                 {{errorResponse.message}}
               </div>
+              <div *ngIf="inputCheck" class="alert alert-danger mt-3" role="alert">
+                Please fill all fields!
+              </div>
               <div class="form-group mt-4 mb-4">
               </div>
               <div class="form-group pt-1 col-md-2 mx-auto">
