--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -61,7 +61,7 @@
               Incorrect email format!
             </div>
             <div *ngIf="inputCheck" class="alert alert-danger mt-3" role="alert">
-              Please fill all input fields!
+              Please fill all fields!
             </div>
             <div class="form-group pt-1 mt-3 col-md-2 mx-auto">
               <button (click)="registerUser(); validateEmail()" class="btn btn-primary btn-block" type="submit">
